# website-live-chat-agent

./: .env.example  .env.example.backup  .gitignore  AGENTS.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  documentation-architecture-spec.md  main.py  methodology.md  pyproject.toml  test_agent.py  workflow.md
.cursor/rules/: ISSUE-BUG-TEMPLATE.md  ar-code-review.mdc  ar-requirement-review.mdc  document.mdc  general.mdc  git.mdc  ld-bugfix-workflow.mdc  pm-new-feature-workflow.mdc  python.mdc  qa-bug-submission.mdc
docs/: TEST_SUMMARY.md
docs/adr/: 0001-langgraph-architecture.md  0002-milvus-integration.md  0003-model-alias-strategy.md  0004-milvus-index-fix.md  0005-model-configuration-separation.md  0006-embedding-url-independence.md  0007-recall-orchestrator-multi-agent.md
docs/api/: openapi.yaml
docs/architecture/: plugin-system.md
docs/configuration/: model-separation.md  url-configuration.md
docs/epics/: epic-001-langgraph-rag-agent.md  epic-002-model-configuration-separation.md  epic-003-recall-orchestration-layer.md
docs/migration/: legacy-to-plugin.md
docs/qa/: ISSUE-BUG-TEMPLATE.md  test-summary.md  testing.md
project_document/issue-fixes/: ar-review-round2-brief.md  issue-1-2-brief.md  issue-10-brief.md  issue-12-brief.md  issue-14-brief.md  issue-16-brief.md  issue-18-brief.md  issue-20-brief.md  issue-25-brief.md  issue-30-brief.md  issue-31-brief.md  issue-32-brief.md  issue-34-brief.md  issue-41-brief.md  issue-7-brief.md  pr-33-ar-review-fix-brief.md
project_document/plans/: issue-42-recall-orchestrator-breakdown.md  issue-42-recall-orchestrator-design.md
project_document/proposals/: issue-12-model-alias.md  issue-18-model-configuration-separation.md  issue-23-embedding-url-configuration.md
project_document/qa/: test-execution-report-2025-10-14.md
project_document/research/: issue-42-recall-orchestration-layer.md
project_document/reviews/: PR-11-review-summary.md  PR-15-review-summary.md  PR-19-review-summary.md  PR-21-review-summary.md  (+5 more)
scripts/: init_example_data.py  run_tests.sh
src/: main.py
tests/: __init__.py  conftest.py
(+78 files in other folders)
